# spcf

./: CMakeLists.txt  Cargo.toml  README.md
src/: lib.rs
src/admin/: admin.hpp  linux.cpp
src/database/: database.cpp  database.hpp
src/devices/: devices.hpp  linux.cpp
src/gui/: button.cpp  dbus.cpp  devicechooser.cpp  filechooser.cpp  gui.cpp  gui.hpp  scan.cpp
src/image/: image.hpp  image.rs
src/model/: model.rs
src/thread/: thread.hpp
