[package]
name = "sortmancer_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
candle = "0.1.0"
candle-examples = {version = "0.10.2"}
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"
image = "0.25.10"
tokenizers = "0.23.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.23"

[lib]
path = "./src/lib.rs"
crate-type = ["cdylib"]

[features]
cuda = ["candle-examples/cuda"]
