[package]
name = "sortmancer_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
candle = "0.1.0"
candle-examples = {version = "0.10.2"}
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
hf-hub = "0.5.0"

[lib]
path = "./src/lib.rs"
crate-type = ["staticlib"]

[features]
cuda = ["candle-examples/cuda"]
